fixed misaaligned issue in mobile dedicated mode

--- a/src/app/pages/forms-dm/forms-dm.page.scss
+++ b/src/app/pages/forms-dm/forms-dm.page.scss
@@ -1,36 +1,34 @@
 ion-content {
   ion-list {
-    &.webapp {
-      &.available-list {
-        ::ng-deep app-archived-item {
-          .col-one {
-            width: 100vw !important;
-            max-width: unset !important;
-            min-width: unset !important;
-            white-space: normal !important;
-          }
+    &.available-list {
+      ::ng-deep app-archived-item {
+        .col-one {
+          width: 100vw !important;
+          max-width: unset !important;
+          min-width: unset !important;
+          white-space: normal !important;
         }
       }
-      &.archived-list {
-        ::ng-deep app-archived-item {
-          .col-one {
-            width: 35vw !important;
-            max-width: unset !important;
-            min-width: unset !important;
-            white-space: normal !important;
-          }
-          .col-two {
-            width: 20vw !important;
-            max-width: unset !important;
-            min-width: unset !important;
-            white-space: normal !important;
-          }
-          .col-three {
-            width: 35vw !important;
-            max-width: unset !important;
-            min-width: unset !important;
-            white-space: normal !important;
-          }
+    }
+    &.archived-list {
+      ::ng-deep app-archived-item {
+        .col-one {
+          width: 35vw !important;
+          max-width: unset !important;
+          min-width: unset !important;
+          white-space: normal !important;
+        }
+        .col-two {
+          width: 20vw !important;
+          max-width: unset !important;
+          min-width: unset !important;
+          white-space: normal !important;
+        }
+        .col-three {
+          width: 35vw !important;
+          max-width: unset !important;
+          min-width: unset !important;
+          white-space: normal !important;
         }
       }
     }
